--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2055,6 +2055,11 @@ only screen and (min-width: 768px) and (max-width: 991.98px) {
     line-height: 1;
 }
 
+.product-item__action form {
+    display: inline;
+    margin-right: 15px;
+}
+
 .product-item__action button,
 .product-item__action a {
     color: #303030;
